@@ -12,6 +12,23 @@
     <td>
       <dl>
 
+      
+<dt>March 31, 2005</dt>
+<dd>
+2.5.17 is out. This release features many small bugfixes. In addition,
+it has support for string number notation for guitar. This feature was
+sponsored by Gunther Strube. <a href="install/#2.5">Download
+LilyPond 2.5.17</a>.
+</dd>
+
+<dt>March 20, 2005</dt>
+<dd>
+LilyPond 2.5.16 is out. This release fixes a few minor but irritating
+errors. A Fedora Core 3 binary is also available. Download <a
+href="install/#2.5">here</a>!
+</dd>
+
+
 <dt>March 14, 2005</dt>
 <dd>
 LilyPond 2.5.15 is out. This release has clean ups in the SVG output,
